--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>URL shortener</h1>
-    <form action="/" method="POST">
-        <label for="">Enter URL to Shorten:</label>
-        <input type="url" id="url" name="URL" required>
-        <button type="submit">Shorten</button>
-    </form>
+    <div class="form-container">
+        <h1>URL shortener</h1>
+        <form action="/" method="POST">
+            <div class="input-group">
+                <label for="url">Enter URL to Shorten:</label>
+                <input type="url" id="url" name="URL" required>
+                <button type="submit">Shorten</button>
+            </div>
+        </form>
+    </div>
     <% if (locals.shortUrl){ %>
         <div>
             <input type="text" id="shortened-url" value="<%= shortUrl %>" readonly>
