fixed copy button position

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,14 +15,14 @@
                 <input type="url" id="url" name="URL" required>
                 <button type="submit">Shorten</button>
             </div>
+            <% if (locals.shortUrl){ %>
+                <div class="input-group">
+                    <input type="text" id="shortened-url" value="<%= shortUrl %>" readonly>
+                    <button class="copy-button" onclick="copyToClipboard()">Copy</button>
+                </div>
+            <% } %>
         </form>
     </div>
-    <% if (locals.shortUrl){ %>
-        <div>
-            <input type="text" id="shortened-url" value="<%= shortUrl %>" readonly>
-            <button onclick="copyToClipboard()">Copy</button>
-        </div>
-        <% } %>
 
 
     <script src="script.js"></script>
