--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     gap: 2rem;
+    margin-top: 10%;
 }
 
 .input-group {
@@ -13,5 +13,23 @@
     align-items: center;
     width: 200px;
     max-width: 400px;
+    margin-top: 5px;
     gap: 1rem;
+}
+#shortened-url {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: auto; 
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
